# agent-alz-assistant

./: .dockerignore  .env.example  .gitignore  AGENTIC_UPGRADE_PLAN.md  CLAUDE.md  Dockerfile  Makefile  README.md  app.py  docker-compose.gassh.yml  docker-compose.yml  mcp_config.docker.json  mcp_config.json  mcp_config.json.example  pyproject.toml
agent_alz_assistant/: __init__.py  agent.py
agent_alz_assistant/mcp_server/: __init__.py  kg_server.py  paperqa_server.py  plotting_server.py
agent_alz_assistant/tools/: __init__.py
agent_alz_assistant/tools/paperqa/: __init__.py  query.py
subagents/kg/: CLAUDE.md
subagents/paperqa/: CLAUDE.md
subagents/pubmed/: CLAUDE.md
