[project]
name = "agent_alz_assistant"
version = "0.1.0"
description = "Agentic AI assistant for Alzheimer's disease research with literature retrieval and knowledge synthesis"
authors = [
    {name = "Justin Reese", email = "justinreese@lbl.gov"}
]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "nicegui>=3.4.0",  # CVE-2025-66645 fix
    "python-dotenv>=1.0.0",
    "paper-qa>=5.0.0",
    "mcp>=1.0.0",
    "bcrypt>=4.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "duckdb>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
